fixed action KR display collapse

--- a/app/static_src/less/partials/style.less
+++ b/app/static_src/less/partials/style.less
@@ -3070,3 +3070,11 @@ Temporary Properties - YOU MUST FIX
         color: @white;
     }
 }
+
+.action-kr-progress-edit-item-box-left {
+  display: table-cell !important;
+}
+
+.action-kr-progress-edit-item-box-right {
+  display: table-cell !important;
+}
